refactor!: upgrade to Vue 3

--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,15 @@
     <title>markdown-to-vue-loader</title>
     <meta name="description" content="Markdown to Vue component loader for Webpack.">
     <meta name="author" content="Chen Fengyuan">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@3.0.1/github-markdown.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/highlightjs@9.12.0/styles/github.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@4/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@4/github-markdown.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@10/styles/github.min.css" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/highlightjs@9.12.0/highlight.pack.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/jquery@3/dist/jquery.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bootstrap@4/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@10/highlight.min.js" crossorigin="anonymous"></script>
     <script src="https://fengyuanchen.github.io/shared/google-analytics.js" crossorigin="anonymous"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </body>
